# xdrippi

./: Cargo.toml  LICENSE  README.md  build.rs
bpf/: Makefile  redirect.c
examples/: fwd.rs  l2.rs  recv.rs
src/: bpf.rs  error.rs  lib.rs  ring.rs  socket.rs  umem.rs  umem_allocator.rs  utils.rs
src/umem_allocator/: atomics.rs  mod.rs  queue.rs
