[package]
name = "xdrippi"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = [
    "Giacomo Longo",
]
description = "An easy to understand AF_XDP library"
readme = "README.md"
repository = "https://github.com/gabibbo97/xdrippi"
keywords = [ "linux", "af_xdp" ]
exclude = [
    "**/Makefile",
]

[profile.release]
lto = "thin"

[dependencies]
libbpf-rs = "=0.25.0-beta.1"
libc = "0.2"

dashmap = "6"
crossbeam = "0.8"

thiserror = "2"

tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
